fixed vertical spacing issue in firefox

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -77,6 +77,16 @@
       height: auto !important;
     }
 
+    .el-row::before {
+      display: block;
+      height: 0 !important;
+    }
+
+    .el-row::after {
+      display: block;
+      height: 0 !important;
+    }
+
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
